<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/relativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/datum"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:padding="5dp"
        android:text="@string/textView_buchung_datum"
        android:singleLine="true" />

    <TextView
        android:id="@+id/betrag"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:padding="5dp"
        android:text="@string/textView_buchung_betrag"
        android:singleLine="true" />

    <TextView
        android:id="@+id/saldo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="end"
        android:padding="5dp"
        android:text="@string/textView_kto_saldo_neu"
        android:singleLine="true" />

</LinearLayout>
