<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpielerseiteKontodatenFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#888888"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/textView_buchung_datum"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="#888888"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/textView_buchung_betrag"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="#888888"
                android:gravity="left"
                android:padding="5dp"
                android:text="@string/textView_kto_saldo_neu"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />


        </LinearLayout>

        <ListView
            android:id="@+id/listView_buchungen"
            android:layout_width="match_parent"
            android:layout_height="402dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:divider="@null" />
    </android.support.v7.widget.CardView>
</FrameLayout>