<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpielerseiteGrunddatenFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="end"
                    android:text="@string/dialog_title_vname"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_vname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="end"
                    android:inputType="text"
                    android:text="@string/dialog_title_name"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:inputType="text"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="end"
                    android:text="@string/dialog_title_bdate"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_bdate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="3"
                    android:digits="0123456789."
                    android:inputType="date"
                    android:maxLength="10"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/aktueller_kontostand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/textView_kto_saldo_aktuell"
                android:textColor="#888888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_kontostand_spieler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="0.1"
                android:fontFamily="sans-serif-light"
                android:text="0,00"
                android:textColor="#AE1732"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/spieltag_EUR_unten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/editText_EUR"
                android:textColor="#AE1732"
                android:textSize="24sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/textView_teilnahmen"
                android:textColor="#888888"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/trainingsteilnahmen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-light"
                android:text="0"
                android:textColor="#AE1732"
                android:textSize="36sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>