<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_spieltag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SpieltagActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/textView_spieltag"
            android:textSize="36sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/spieltag_platzkosten"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="5"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/textView_platzkosten"
                    android:textSize="24sp" />

                <FrameLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/circle_spieltag" />

                    <EditText
                        android:id="@+id/editText_platzkosten"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="3dp"
                        android:backgroundTint="#AE1732"
                        android:digits="0123456789,"
                        android:ems="10"
                        android:fontFamily="sans-serif-light"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/spieltag_EUR_oben"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="70dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/editText_EUR"
                        android:textSize="22sp" />
                </FrameLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/spieltag_who"
                android:layout_width="181dp"
                android:layout_height="35dp"
                android:layout_gravity="start|top"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/textView_who_played"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/listview_spielerauswahl"
                android:layout_width="374dp"
                android:layout_height="235dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:fadeScrollbars="false"
                android:scrollbarSize="7dp"
                android:scrollbars="vertical">

            </ListView>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/betrag_je_spieler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/textView_betrag__pro_spieler"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_betrag_je_spieler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:text="0,00"
                        android:textColor="#AE1732"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/spieltag_EUR_unten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/editText_EUR"
                        android:textColor="#AE1732"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button_add_spieltag"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_weight="0.5"
                        android:text="@string/button_buchung_hinzufügen"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@android:color/white"
        app:itemIconTint="@android:color/black"
        app:itemTextColor="@android:color/black"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>

